changes per sanjay

--- a/resources/cell-lines/index.html
+++ b/resources/cell-lines/index.html
@@ -3,10 +3,10 @@ layout: resources
 title: Request iPSC Cell Lines
 ---
 
-<p class="bg-warning"><strong>The subsidy for access to this resource expires summer 2024.</strong>
+<p class="bg-warning"><strong>The subsidy for access to this resource moved to <a href="https://pcen.wustl.edu/" target="_blank">WU-PCEN</a>.</strong>
 </p>
 
-<p>ATLAS-D2K human iPSC <a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line">parental</a> and <a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line">reporter</a> lines are available by request to the research community.</p>
+<p>Human iPSC <a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line">parental</a> and <a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line">reporter</a> lines are available by request to the research community through the <a href="https://pcen.wustl.edu/" target="_blank">WU-PCEN</a>.</p>
 
 <p class="note">We are now able to offer the first vial of each human iPSC cell lines at no charge and the second vial of the same cell line for $250.00. The recipient will be responsible for shipping costs. This requires membership in <a href="https://pcen.wustl.edu/" target="_blank">WU-PCEN</a> (see below for details).</p>
 
@@ -14,7 +14,7 @@ title: Request iPSC Cell Lines
 
 <h2>Costs</h2>
 
-<p>The cost of obtaining Human Induced Pluripotent Stem Cells (HiPSCs) is now covered by subsidies by the Kidney Translational Research Center (KTRC), ATLAS D2K (U24DK135157) and WU-PCEN (P50DK133943) grants. These sources should be cited in publications and presentations (see "Acknowledgements" section for full citation information).</p>
+<p>The cost of obtaining Human Induced Pluripotent Stem Cells (HiPSCs) is now covered by subsidies by the Kidney Translational Research Center (KTRC) and WU-PCEN (P50DK133943) grants. These sources should be cited in publications and presentations (see "Acknowledgements" section for full citation information).</p>
 
 <p>We will now be able to offer the first vial of each human iPSC cell lines at no charge and the second vial of the same cell line for $250.00.</p>
 
@@ -24,7 +24,7 @@ title: Request iPSC Cell Lines
 
 <p>Each line is available through request links that initiate a process to connect you with the donating laboratory and the cell distribution center funded by ATLAS-D2K.</p>
 
-<p>Cell lines are stored in the ATLAS-D2K iPSC repository at Washington University's <a href="https://research.wustl.edu/core-facilities/ktrc/" target="_blank">Kidney Translational Research Center (KTRC)</a>.</p>
+<p>Cell lines are stored in the <a href="https://pcen.wustl.edu/" target="_blank">WU-PCEN repository</a> at Washington University's <a href="https://research.wustl.edu/core-facilities/ktrc/" target="_blank">Kidney Translational Research Center (KTRC)</a>.</p>
 
 <p class="note">Note for International Requests: The pricing for vials remains consistent globally. However, international shipping incurs higher costs. Typically, shipments are made via World Courier, known for reliability but higher expenses. Up to 3 cell lines can be shipped together, provided all necessary documentation is in order.
   </p>
