updated with PCEN info

--- a/resources/cell-lines/index.html
+++ b/resources/cell-lines/index.html
@@ -3,18 +3,18 @@ layout: resources
 title: Request iPSC Cell Lines
 ---
 
-<p class="bg-warning"><strong>The subsidy for access to this resource expires summer 2024.</strong>
+<p class="bg-warning"><strong>The subsidy for access to this resource moved to <a href="https://pcen.wustl.edu/" target="_blank">WU-PCEN</a>.</strong>
 </p>
 
-<p>ATLAS-D2K human iPSC <a href="{{ "/chaise/recordset/#2/Cell_Line:Parental_Cell_Line" | relative_url }}">parental</a> and <a href="{{ "/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line" | relative_url }}">reporter</a> lines are available by request to the research community.</p>
+<p>Human iPSC <a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line">parental</a> and <a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line">reporter</a> lines are available by request to the research community through the <a href="https://pcen.wustl.edu/" target="_blank">WU-PCEN</a>.</p>
 
 <p class="note">We are now able to offer the first vial of each human iPSC cell lines at no charge and the second vial of the same cell line for $250.00. The recipient will be responsible for shipping costs. This requires membership in <a href="https://pcen.wustl.edu/" target="_blank">WU-PCEN</a> (see below for details).</p>
 
-<p>Through integrated efforts of several entities, human iPSC <a href="{{ "/chaise/recordset/#2/Cell_Line:Parental_Cell_Line" | relative_url }}">parental</a> and <a href="{{ "/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line" | relative_url }}">reporter</a> lines are available to the research community. These tools are designed to enable studies to optimize current or new protocols toward target kidney lineages, adapt differentiation efforts to additional contexts (e.g. bioprinting or scaffold seeding), or monitor the maintenance of cell identity under different culture conditions. The reporter iPSC lines are designed to mark specific kidney cell populations upon differentiation into organoids with various fluorescent proteins. Some versions include cell specific Cre recombinase expression for cell lineage tracing.  Applications also include engineering replacement kidneys and preclinical model system research.</p>
+<p>Through integrated efforts of several entities, human iPSC <a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line">parental</a> and <a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line">reporter</a> lines are available to the research community. These tools are designed to enable studies to optimize current or new protocols toward target kidney lineages, adapt differentiation efforts to additional contexts (e.g. bioprinting or scaffold seeding), or monitor the maintenance of cell identity under different culture conditions. The reporter iPSC lines are designed to mark specific kidney cell populations upon differentiation into organoids with various fluorescent proteins. Some versions include cell specific Cre recombinase expression for cell lineage tracing.  Applications also include engineering replacement kidneys and preclinical model system research.</p>
 
 <h2>Costs</h2>
 
-<p>The cost of obtaining Human Induced Pluripotent Stem Cells (HiPSCs) is now covered by subsidies by the Kidney Translational Research Center (KTRC), ATLAS D2K (U24DK135157) and WU-PCEN (P50DK133943) grants. These sources should be cited in publications and presentations (see "Acknowledgements" section for full citation information).</p>
+<p>The cost of obtaining Human Induced Pluripotent Stem Cells (HiPSCs) is now covered by subsidies by the Kidney Translational Research Center (KTRC) and WU-PCEN (P50DK133943) grants. These sources should be cited in publications and presentations (see "Acknowledgements" section for full citation information).</p>
 
 <p>We will now be able to offer the first vial of each human iPSC cell lines at no charge and the second vial of the same cell line for $250.00.</p>
 
@@ -24,7 +24,7 @@ title: Request iPSC Cell Lines
 
 <p>Each line is available through request links that initiate a process to connect you with the donating laboratory and the cell distribution center funded by ATLAS-D2K.</p>
 
-<p>Cell lines are stored in the ATLAS-D2K iPSC repository at Washington University's <a href="https://research.wustl.edu/core-facilities/ktrc/" target="_blank">Kidney Translational Research Center (KTRC)</a>.</p>
+<p>Cell lines are stored in the <a href="https://pcen.wustl.edu/" target="_blank">WU-PCEN repository</a> at Washington University's <a href="https://research.wustl.edu/core-facilities/ktrc/" target="_blank">Kidney Translational Research Center (KTRC)</a>.</p>
 
 <p class="note">Note for International Requests: The pricing for vials remains consistent globally. However, international shipping incurs higher costs. Typically, shipments are made via World Courier, known for reliability but higher expenses. Up to 3 cell lines can be shipped together, provided all necessary documentation is in order.
   </p>
@@ -34,8 +34,8 @@ title: Request iPSC Cell Lines
 <p>The process for requesting a cell line is as follows:</p>
 
 <ol>
-  <li>Look through our available cell lines: <a href="{{ "/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line?pcid=static" | relative_url }}">Browse Reporter Lines</a> | <a href="{{ "/chaise/recordset/#2/Cell_Line:Parental_Cell_Line?pcid=static" | relative_url }}">Browse Parental Lines</a></li>
-  <li>For a cell line you would like to request, click the <strong><em>Request this cell line</em></strong> link on the cell line records or <strong><a href="{{ "/resources/cell-lines/request-cell-lines/" | relative_url }}">go directly to the form here</a></strong> and choose the cell line.</li>
+  <li>Look through our available cell lines: <a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line?pcid=static">Browse Reporter Lines</a> | <a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line?pcid=static">Browse Parental Lines</a></li>
+  <li>For a cell line you would like to request, click the <strong><em>Request this cell line</em></strong> link on the cell line records or <strong><a href="/resources/cell-lines/request-cell-lines/">go directly to the form here</a></strong> and choose the cell line.</li>
   <li>You will receive an email with the contact information for the cell line provider.</li>
   <li>The KTRC will send you an initial email with instructions on completing and submitting all approval documentation and how to obtain the Materials Transfer Agreement (MTA) for the requested cell line.</li>
   <li>After all forms have been returned and approved, and a fully executed MTA has been emailed to the KTRC, shipping arrangements will be agreed upon and scheduled. <strong>The requester is responsible for all shipping costs.</strong></li>
